--- a/app/assets/styles/global/_inpages.scss
+++ b/app/assets/styles/global/_inpages.scss
@@ -59,7 +59,7 @@
 
   &__title--centered {
     display: block;
-    max-width: 32rem;
+    max-width: 42rem;
     margin: 0 auto;
   }
 
